Added Readme and made final changes

--- a/src/example.html
+++ b/src/example.html
@@ -21,7 +21,7 @@
     </form>
   </div>
   
-  <script src="/scripts/captcha.js"></script>
+  <script src="https://captcherr.herokuapp.com/src/scripts/captcha.js"></script>
   
   <script>
     var form = document.getElementById('form');
