--- a/src/example.html
+++ b/src/example.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/example.css" >
+  <link rel="stylesheet" href="/src/example.css" >
   <title>Document</title>
 </head>
 <body>
